--- a/.config/i3/config
+++ b/.config/i3/config
@@ -9,19 +9,19 @@ set $mod Mod4
 font pango:JetBrains Mono 13
 
 # Volume control
-bindsym XF86AudioRaiseVolume exec --no-startup-id amixer set Master 5%+
-bindsym XF86AudioLowerVolume exec --no-startup-id amixer set Master 5%-
+bindsym XF86AudioRaiseVolume exec --no-startup-id amixer set Master 5%+ && ~/.config/notifications/volume.sh
+bindsym XF86AudioLowerVolume exec --no-startup-id amixer set Master 5%- && ~/.config/notifications/volume.sh
 bindsym XF86AudioMute exec --no-startup-id amixer sset Master toggle 
 
 # Media control
-bindsym XF86AudioPlay exec playerctl play-pause
-bindsym XF86AudioPause exec playerctl play-pause
-bindsym XF86AudioNext exec playerctl next
-bindsym XF86AudioPrev exec playerctl previous
+bindsym XF86AudioPlay exec --no-startup-id playerctl play-pause
+bindsym XF86AudioPause exec --no-startup-id playerctl play-pause
+bindsym XF86AudioNext exec --no-startup-id playerctl next
+bindsym XF86AudioPrev exec --no-startup-id playerctl previous
 
 # Brightness control (requires acpi_video0 rule in /etc/udev/rules.d/backlight.rule)
-bindsym XF86MonBrightnessUp exec --no-startup-id xbacklight -inc 1
-bindsym XF86MonBrightnessDown exec --no-startup-id xbacklight -dec 1
+bindsym XF86MonBrightnessUp exec --no-startup-id xbacklight -inc 2 && ~/.config/notifications/backlight.sh
+bindsym XF86MonBrightnessDown exec --no-startup-id xbacklight -dec 2 && ~/.config/notifications/backlight.sh
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
@@ -62,6 +62,7 @@ bindsym $mod+Shift+Right move right
 # change split direction
 bindsym $mod+h split h
 bindsym $mod+v split v
+bindsym $mod+t split toggle
 
 # enter fullscreen mode for the focused container
 bindsym $mod+f fullscreen toggle
@@ -119,6 +120,12 @@ bindsym $mod+Shift+7 move container to workspace $ws7
 bindsym $mod+Shift+8 move container to workspace $ws8
 bindsym $mod+Shift+9 move container to workspace $ws9
 
+## default app locations
+for_window [class="Spotify"] move to workspace $ws4
+
+# enable auto back and forth
+workspace_auto_back_and_forth yes
+
 # reload the configuration file
 bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
@@ -171,9 +178,8 @@ client.urgent 			#2f343a #900000 #ffffff #900000
 
 # start-up thingys
 exec --no-startup-id xss-lock /home/chaos/.config/i3lock/lock.sh
-exec --no-startup-id nm-applet
 exec_always --no-startup-id picom --backend glx --vsync --config /home/chaos/.config/picom/picom.conf
-exec_always --no-startup-id i3-msg gaps inner all set 30
-exec_always --no-startup-id i3-msg gaps outer all set 30
+exec_always --no-startup-id i3-msg gaps inner all set 10
+exec_always --no-startup-id i3-msg gaps outer all set 10
 for_window [class=".*"] border pixel 3
 
