--- a/.config/i3/config
+++ b/.config/i3/config
@@ -6,7 +6,7 @@
 #	                               |___/ 
 
 set $mod Mod4
-font pango:JetBrains Mono 13
+font pango:JetBrains Mono, IPAPMincho 13
 
 # Volume control
 bindsym XF86AudioRaiseVolume exec --no-startup-id amixer set Master 5%+ && ~/.config/notifications/volume.sh
@@ -159,7 +159,7 @@ bindsym $mod+r mode "resize"
 bar {
 	position top
 	tray_output primary
-    status_command i3blocks -c /home/chaos/.config/i3blocks/config
+    status_command i3blocks -c ~/.config/i3blocks/config
 	colors {
     	separator 			#2e3440
    		background 			#2e3440
@@ -178,8 +178,8 @@ client.urgent 			#2f343a #900000 #ffffff #900000
 
 # start-up thingys
 exec --no-startup-id ~/.fehbg
-exec --no-startup-id xss-lock /home/chaos/.config/i3lock/lock.sh
-exec_always --no-startup-id picom --backend glx --vsync --config /home/chaos/.config/picom/picom.conf
+exec --no-startup-id xss-lock ~/.config/i3lock/lock.sh
+exec_always --no-startup-id picom --backend glx --vsync --config ~/.config/picom/picom.conf
 exec_always --no-startup-id i3-msg gaps inner all set 10
 exec_always --no-startup-id i3-msg gaps outer all set 10
 for_window [class=".*"] border pixel 3
