--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -1,1 +1,41 @@
+blur: {
+  method = "kawase";
+  strength = 7;
+  background = false;
+  background-frame = false;
+  background-fixed = false;
+}
+
+corner-radius = 10; 
+round-borders = 5;
+rounded-corners-exclude = [ 
+	"class_g = 'i3bar'",
+	"class_g = 'Rofi'",
+];
+
+opacity-rule = [
+	"100:class_g ~= 'i3bar'",
+	"100:class_g ~= 'Rofi'",
+	"95:class_g ~= 'kitty' && !focused",
+	"100:class_g ~= 'firefox' && focused",
+	"98:class_g ~= 'firefox' && !focused",
+	"95:class_g ~= 'Spotify' && focused",
+	"90:class_g ~= 'Spotify' && !focused",
+];
+
+shadow = true;
+shadow-radius = 18;
+shadow-opacity = 0.3;
+shadow-offset-x = -15;
+shadow-offset-y = -15;
+shadow-exclude = [
+    "class_g = 'i3bar'"
+];
+
+# fading = true;
+# fade-delta = 3;
+# fade-in-step = 0.015;
+# fade-out-step = 0.015;
+# no-fading-openclose = false;
+# fade-exclude = [ ];
 
