--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -1,13 +1,24 @@
 [Settings]
-gtk-theme-name = Nordic
-gtk-icon-theme-name = NordArc
-gtk-fallback-icon-theme = NordArc
-gtk-font-name = Overpass 11
-gtk-menu-images = true
+gtk-theme-name = Nordic-darker
+gtk-icon-theme-name = Nord-Icons
+gtk-fallback-icon-theme = Nord-Icons
+gtk-font-name = Iosevka 12
+
+gtk-button-images=1
+gtk-menu-images=1
+
+# "disables" sound events
+gtk-enable-event-sounds=0
+gtk-enable-input-feedback-sounds=0
 
 # "disables" recent files entries
 gtk-recent-files-max-age=0
 gtk-recent-files-limit=0
 
 gtk-dialogs-use-header = false
-#gtk-windows-use-header = false
+gtk-windows-use-header = false
+
+gtk-xft-antialias=1
+gtk-xft-hinting=1
+gtk-xft-hintstyle=hintslight
+gtk-xft-rgba=rgb
