--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -8,19 +8,21 @@ blur: {
 
 corner-radius = 10; 
 round-borders = 5;
-rounded-corners-exclude = [ 
-	"class_g = 'i3bar'",
+
+rounded-corners-exclude = [
+ 	"class_g = 'i3bar'",
 	"class_g = 'Rofi'",
+    "window_type = 'menu'",
+    "window_type = 'tooltip'",
+    "window_type = 'popup_menu'",
+    "window_type = 'dropdown_menu'"
 ];
 
 opacity-rule = [
-	"100:class_g ~= 'i3bar'",
-	"100:class_g ~= 'Rofi'",
 	"95:class_g ~= 'kitty' && !focused",
-	"100:class_g ~= 'firefox' && focused",
-	"98:class_g ~= 'firefox' && !focused",
-	"95:class_g ~= 'Spotify' && focused",
-	"90:class_g ~= 'Spotify' && !focused",
+	"95:class_g ~= 'firefox'",
+	"95:class_g ~= 'Spotify'",
+	"95:class_g ~= 'discord'",
 ];
 
 shadow = true;
