--- a/.config/i3/config
+++ b/.config/i3/config
@@ -33,7 +33,9 @@ bindsym $mod+Return exec kitty
 bindsym $mod+Shift+q kill
 
 # dmenu, rofi keybinds
-bindsym $mod+d exec --no-startup-id rofi -modi drun#run#window -show drun
+#bindsym $mod+d exec --no-startup-id rofi -combi-modi drun#run -modi combi#window -show combi
+bindsym $mod+d exec --no-startup-id rofi -modi drun#run -show drun
+bindsym $mod+w exec --no-startup-id rofi -modi window -show window -no-show-icons
 bindsym $mod+x exec --no-startup-id ~/.config/rofi/powermenu/powermenu.sh
 
 # change focus
@@ -69,9 +71,9 @@ bindsym $mod+t split toggle
 bindsym $mod+f fullscreen toggle
 
 # change container layout (stacked, tabbed, toggle split)
-bindsym $mod+s layout stacking
-bindsym $mod+w layout tabbed
-bindsym $mod+e layout toggle split
+bindsym $mod+Shift+s layout stacking
+bindsym $mod+Shift+w layout tabbed
+bindsym $mod+Shift+t layout toggle split
 
 # toggle tiling / floating
 bindsym $mod+Shift+space floating toggle
@@ -90,12 +92,13 @@ set $ws0 "0 󰆌 "
 set $ws1 "1 󰞷 "
 set $ws2 "2 󰈹 "
 set $ws3 "3 󰈮 "
-set $ws4 "4 󰓇 "
+set $ws4 "4 󰆌 " 
 set $ws5 "5 󰆌 "
 set $ws6 "6 󰆌 "
 set $ws7 "7 󰆌 "
-set $ws8 "8 󰆌 "
-set $ws9 "9 󰆌 "
+set $ws8 "8 󰊻 "
+set $ws9 "9 󰙯 "
+set $ws10 "10 󰓇 "
 
 # switch to workspace
 bindsym $mod+grave workspace $ws0
@@ -108,6 +111,7 @@ bindsym $mod+6 workspace $ws6
 bindsym $mod+7 workspace $ws7
 bindsym $mod+8 workspace $ws8
 bindsym $mod+9 workspace $ws9
+bindsym $mod+0 workspace $ws10
 
 # move focused container to workspace
 bindsym $mod+Shift+grave move container to workspace $ws0
@@ -120,13 +124,16 @@ bindsym $mod+Shift+6 move container to workspace $ws6
 bindsym $mod+Shift+7 move container to workspace $ws7
 bindsym $mod+Shift+8 move container to workspace $ws8
 bindsym $mod+Shift+9 move container to workspace $ws9
+bindsym $mod+Shift+0 move container to workspace $ws10
 
 ## default app locations
 for_window [class=".*"] border pixel 0
-for_window [class="Spotify"] move to workspace $ws4
+for_window [class="Teams"] move to workspace $ws8
+for_window [class="discord"] move to workspace $ws9
+for_window [class="Spotify"] move to workspace $ws10
 
-# enable auto back and forth
-workspace_auto_back_and_forth yes
+# disable auto back and forth
+workspace_auto_back_and_forth no
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
@@ -184,6 +191,6 @@ exec --no-startup-id xrandr --auto
 exec --no-startup-id prime-offload
 exec --no-startup-id ~/.fehbg
 exec --no-startup-id xss-lock ~/.config/i3lock/lock.sh
-exec_always --no-startup-id picom --backend glx --vsync --config ~/.config/picom/picom.conf
+exec --no-startup-id picom --backend glx --vsync --config ~/.config/picom/picom.conf
 exec_always --no-startup-id i3-msg gaps inner all set 15
 
