ncmpcpp + other tweaks

--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -2,7 +2,7 @@
 gtk-theme-name = Nordic-darker
 gtk-icon-theme-name = Nord-Icons
 gtk-fallback-icon-theme = Nord-Icons
-gtk-font-name = Iosevka 12
+gtk-font-name = Rubik 12
 
 gtk-button-images=1
 gtk-menu-images=1
