--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -1,5 +1,5 @@
 blur: {
-  method = "kawase";
+  method = "dual_kawase";
   strength = 7;
   background = false;
   background-frame = false;
@@ -19,17 +19,15 @@ rounded-corners-exclude = [
 ];
 
 opacity-rule = [
-	"95:class_g ~= 'kitty' && !focused",
-	"95:class_g ~= 'firefox'",
-	"95:class_g ~= 'Spotify'",
-	"95:class_g ~= 'discord'",
+    "98:class_g ~= 'kitty' && !focused",
+	"100:class_g ~= 'kitty' && focused",
 ];
 
 shadow = true;
-shadow-radius = 18;
-shadow-opacity = 0.3;
-shadow-offset-x = -15;
-shadow-offset-y = -15;
+shadow-radius = 20;
+shadow-opacity = 0.5;
+shadow-offset-x = -17;
+shadow-offset-y = -17;
 shadow-exclude = [
     "class_g = 'i3bar'"
 ];
