--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -11,6 +11,7 @@ round-borders = 5;
 
 rounded-corners-exclude = [
  	"class_g = 'i3bar'",
+ 	"class_g = 'i3-frame'",
 	"class_g = 'Rofi'",
     "window_type = 'menu'",
     "window_type = 'tooltip'",
@@ -29,7 +30,8 @@ shadow-opacity = 0.5;
 shadow-offset-x = -17;
 shadow-offset-y = -17;
 shadow-exclude = [
-    "class_g = 'i3bar'"
+    "class_g = 'i3bar'",
+ 	"class_g = 'i3-frame'"
 ];
 
 # fading = true;
