--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -1,7 +1,30 @@
 # Don't print a new line at the start of the prompt
 add_newline = false
 
-format = '$all'
+format = """
+$username\
+$hostname\
+$shlvl\
+$directory\
+$git_branch\
+$git_commit\
+$git_state\
+$git_status\
+$hg_branch\
+$docker_context\
+$package\
+$memory_usage\
+$openstack\
+$env_var\
+$crystal\
+$custom\
+$cmd_duration\
+$line_break\
+$jobs\
+$battery\
+$time\
+$status\
+$character"""
 
 # Disables the line_break module, making the prompt a single line.
 [line_break]
@@ -9,8 +32,8 @@ disabled = true
 
 # Replace the "❯" symbol in the prompt with "➜"
 [character]                            # The name of the module we are configuring is "character"
-success_symbol = "[λ](bold green)"     # The "success_symbol" segment is being set to "➜" with the color "bold green"
-error_symbol = "[λ](bold red)"         # The "error_symbol" segment is being set to "➜" with the color "bold red"
+success_symbol = "[󰊠 ](bold green)"     # The "success_symbol" segment is being set to "➜" with the color "bold green"
+error_symbol = "[󰊠 ](bold red)"         # The "error_symbol" segment is being set to "➜" with the color "bold red"
 
 [perl]
 symbol = " "
