--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -9,8 +9,8 @@ disabled = true
 
 # Replace the "❯" symbol in the prompt with "➜"
 [character]                            # The name of the module we are configuring is "character"
-success_symbol = "[λ](bold green)"     # The "success_symbol" segment is being set to "➜" with the color "bold green"
-error_symbol = "[λ](bold red)"         # The "error_symbol" segment is being set to "➜" with the color "bold red"
+success_symbol = "[⏾](bold green)"     # The "success_symbol" segment is being set to "➜" with the color "bold green"
+error_symbol = "[⏾](bold red)"         # The "error_symbol" segment is being set to "➜" with the color "bold red"
 
 [perl]
 symbol = " "
